--- a/src/sass/page-specific/_page-specific.scss
+++ b/src/sass/page-specific/_page-specific.scss
@@ -243,7 +243,7 @@ img {
 
       .recipes-otd-load-more-btn-cont {
         text-align: right;
-
+        display: none;
         @media screen and (max-width: 700px) {
           text-align: center;
         }
