--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -169,7 +169,8 @@
         border-right: 3px solid black;
         padding: 0.5rem 1.5rem 0.5rem 0;
         opacity: 0;
-        transition: opacity 0.3s ease;
+				z-index: -10;
+        transition: all 0.3s ease;
 
         li {
 					a.active {
@@ -184,6 +185,7 @@
 
       ul.active {
         opacity: 1;
+				z-index: 0;
       }
     }
   }
