--- a/src/sass/page-specific/_page-specific.scss
+++ b/src/sass/page-specific/_page-specific.scss
@@ -253,7 +253,7 @@ img {
           font-size: 1.25rem;
           padding: 0.5rem 1rem;
           background: #fff8ef;
-          border: 4px solid #fb9400;
+          border: 4px solid #f3eee7;
           box-sizing: border-box;
           border-radius: 50px;
         }
