--- a/src/App.scss
+++ b/src/App.scss
@@ -173,3 +173,11 @@
 .display-none {
 	display: none !important;
 }
+
+main {
+	padding-top: 65.74px;
+
+	@media screen and (max-width: 700px) {
+		padding-top: 56.28px;
+	}
+}
