--- a/src/App.scss
+++ b/src/App.scss
@@ -180,6 +180,7 @@
 .heading-spacing {
 	padding-top: 65.74px;
 	width: auto;
+	z-index: -9;
 
 	@media screen and (max-width: 700px) {
 		padding-top: 56.28px;
