--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -1,8 +1,7 @@
 .app_header {
   padding: 0.25rem 0.5rem 0rem 0.5rem;
   background: #fff;
-  border-bottom: 2px solid #fb9400;
-  box-shadow: 0px 2px 2px #fb9400;
+  box-shadow: 0px 4px 2px #fb9400;
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
@@ -14,7 +13,7 @@
 	right: 0;
 
   @media screen and (max-width: 700px) {
-    padding: 0.25rem 0.5rem 0.25rem 0.5rem;
+    padding: 0.5rem 0.25rem;
   }
 
   nav ul {
@@ -66,7 +65,7 @@
       }
       img.mobile-header-logo {
         display: none;
-        width: 2.5rem;
+        width: 10rem;
       }
 
       @media screen and (max-width: 700px) {
@@ -82,8 +81,8 @@
 
   .search {
     display: flex;
-    margin-right: 0.75rem;
     transition: all 0.3s ease;
+		margin: 0.75rem 0.75rem 0.75rem 0;
 
     .search-btn {
       background-color: transparent;
@@ -131,13 +130,19 @@
 
   .search.active {
     background-color: #fff8ef;
-    border-radius: 20px;
+    border-radius: 26px;
+		box-shadow: 0px 0px 0px 1px #fb9400;
+
+		@media screen and (max-width: 700px) {
+			transform: translateX(-1.2rem);
+			margin: 0;
+		}
 
     .search-btn {
-      padding: 0.5rem 0.95rem;
-      background: #fb9400;
-      border-radius: 50%;
-      color: #fff;
+			padding: 0.9rem 0.95rem;
+			background: #fb9400;
+			border-radius: 50%;
+			color: #fff;
 
       svg {
         width: 1rem;
@@ -148,11 +153,23 @@
           fill: #fff;
         }
       }
+
+      .svg-2 {
+        path {
+          stroke: #fff;
+        }
+      }
     }
 
     input {
       width: 20rem;
 			padding: 0.75rem;
+
+			@media screen and (max-width: 700px) {
+				width: 100vw;
+				padding: 0.75rem;
+				max-width: calc(100vw - 4rem);
+			}
     }
   }
 
