--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -7,10 +7,10 @@
   align-items: center;
   justify-content: space-between;
   z-index: 2;
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
 
   @media screen and (max-width: 700px) {
     padding: 0.5rem 0.25rem;
@@ -38,12 +38,12 @@
         font-size: 1.25rem;
         color: #000000;
         text-decoration: none;
-				transition: 0.1s all ease;
+        transition: 0.1s all ease;
       }
 
-			a.active {
-				color: #FB9400;
-			}
+      a.active {
+        color: #fb9400;
+      }
     }
   }
 
@@ -82,7 +82,7 @@
   .search {
     display: flex;
     transition: all 0.3s ease;
-		margin: 0.75rem 0.75rem 0.75rem 0;
+    margin: 0.75rem 0.75rem 0.75rem 0;
 
     .search-btn {
       background-color: transparent;
@@ -122,27 +122,27 @@
       border: none;
       width: 0;
       transition: all 0.3s ease;
-			font-size: 1.25rem;
-			padding: 0;
-			font-family: "Avenir", sans-serif;
+      font-size: 1.25rem;
+      padding: 0;
+      font-family: "Avenir", sans-serif;
     }
   }
 
   .search.active {
     background-color: #fff8ef;
     border-radius: 26px;
-		box-shadow: 0px 0px 0px 1px #fb9400;
+    box-shadow: 0px 0px 0px 1px #fb9400;
 
-		@media screen and (max-width: 700px) {
-			transform: translateX(-1.2rem);
-			margin: 0;
-		}
+    @media screen and (max-width: 700px) {
+      transform: translateX(-1.2rem);
+      margin: 0;
+    }
 
     .search-btn {
-			padding: 0.9rem 0.95rem;
-			background: #fb9400;
-			border-radius: 50%;
-			color: #fff;
+      padding: 0.9rem 0.95rem;
+      background: #fb9400;
+      border-radius: 50%;
+      color: #fff;
 
       svg {
         width: 1rem;
@@ -163,13 +163,13 @@
 
     input {
       width: 20rem;
-			padding: 0.75rem;
+      padding: 0.75rem;
 
-			@media screen and (max-width: 700px) {
-				width: 100vw;
-				padding: 0.75rem;
-				max-width: calc(100vw - 4rem);
-			}
+      @media screen and (max-width: 700px) {
+        width: 100vw;
+        padding: 0.75rem;
+        max-width: calc(100vw - 4rem);
+      }
     }
   }
 
@@ -189,15 +189,14 @@
         align-items: center;
         border-right: 3px solid black;
         opacity: 0;
-				z-index: -10;
+        z-index: -10;
         // transition: all 0.3s ease;
-				width: 0;
-				padding: 0;
+        width: 0;
+        padding: 0;
 
         li {
-					a.active {
-
-					}
+          a.active {
+          }
           img {
             width: 1.8rem;
             vertical-align: middle;
@@ -207,8 +206,8 @@
 
       ul.active {
         opacity: 1;
-				z-index: 0;
-				width: 100%;
+        z-index: 0;
+        width: 100%;
         padding: 0.5rem 1.5rem 0.5rem 0 !important;
       }
     }
