--- a/src/sass/page-specific/_page-specific.scss
+++ b/src/sass/page-specific/_page-specific.scss
@@ -47,62 +47,74 @@ img {
 
     // start blindbox styling
     .blindbox-hero-cont {
-      padding: 2rem 6rem;
+      padding: 2rem;
       background: #fff8ef;
 
       @media screen and (max-width: 700px) {
-        padding: 1rem;
+        padding: 3rem 1rem;
       }
 
       > * {
-				display: flex;
-        align-items: center;
-				justify-content: space-between;
         gap: 2rem;
 
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+
         @media screen and (max-width: 700px) {
-					flex-direction: column;
+					grid-template-columns: repeat(1, 1fr);
         }
       }
 
       .blindbox-hero-text {
         font-family: "Avenir", sans-serif;
-        font-size: 1.25rem;
+        font-size: 1.75rem;
         color: #000000;
         line-height: 1.4;
+        align-self: center;
 
         @media screen and (max-width: 700px) {
           text-align: left;
+          font-size: 1.25rem;
         }
       }
 
       .blindbox-hero-image-btn {
         display: flex;
         flex-direction: column;
-        align-items: center;
         text-align: center;
         gap: 0.5rem;
+        align-items: flex-end;
+        align-self: center;
 
         @media screen and (max-width: 700px) {
           align-items: center;
           justify-content: center;
         }
 
-        .blindbox-hero-image-cont {
-          img {
-            width: 20rem;
-          }
-        }
+        > div {
+					display: grid;
+					gap: 1rem;
 
-        .blindbox-hero-btn-cont {
-          button.blindbox-hero-btn {
-            font-family: "Avenir", sans-serif;
-            font-size: 1.25rem;
-            padding: 0.5rem 1rem;
-            background: #fff8ef;
-            border: 4px solid #fb9400;
-            box-sizing: border-box;
-            border-radius: 50px;
+					@media screen and (max-width: 700px) {
+						gap: 2rem;
+					}
+
+          .blindbox-hero-image-cont {
+            img {
+              width: 20rem;
+            }
+          }
+
+          .blindbox-hero-btn-cont {
+            button.blindbox-hero-btn {
+              font-family: "Avenir", sans-serif;
+              font-size: 1.25rem;
+              padding: 0.5rem 1rem;
+              background: #fff8ef;
+              border: 4px solid #fb9400;
+              box-sizing: border-box;
+              border-radius: 50px;
+            }
           }
         }
       }
@@ -159,13 +171,13 @@ img {
 
         > div {
           display: flex;
-					flex-direction: column;
-					justify-content: space-between;
-					border-radius: 30px 30px 0px 0px;
-					/* background: #A9A9A9; */
-					/* padding: 2px; */
-					cursor: pointer;
-					box-shadow: 0px 0px 0px 2px #a9a9a9;
+          flex-direction: column;
+          justify-content: space-between;
+          border-radius: 30px 30px 0px 0px;
+          /* background: #A9A9A9; */
+          /* padding: 2px; */
+          cursor: pointer;
+          box-shadow: 0px 0px 0px 2px #a9a9a9;
 
           .recipes-otd-img-cont {
             display: flex;
@@ -173,16 +185,16 @@ img {
 
             img {
               width: 100%;
-							border-radius: 30px 30px 0px 0px;
+              border-radius: 30px 30px 0px 0px;
             }
           }
 
           .recipes-otd-name-cont {
             min-height: 70px;
             padding: 0.5rem;
-						background: #fff;
-						transition: background 0.1s ease;
-						letter-spacing: 1px;
+            background: #fff;
+            transition: background 0.1s ease;
+            letter-spacing: 1px;
 
             h4 {
               font-family: "Fontastique", cursive;
@@ -196,12 +208,12 @@ img {
             justify-content: space-between;
             align-items: flex-end;
             padding: 0.5rem;
-						background: #fff;
-						transition: background 0.1s ease;
+            background: #fff;
+            transition: background 0.1s ease;
 
             .recipes-otd-category-cooking-time-cont {
-							display: grid;
-							gap: 0.25rem;
+              display: grid;
+              gap: 0.25rem;
 
               p {
                 font-family: "Avenir", sans-serif;
@@ -218,27 +230,28 @@ img {
               > * {
                 display: flex;
                 gap: 0.125rem;
-								align-items: flex-end;
+                align-items: flex-end;
 
-								.recipes-otds-likes, .recipes-otd-likes {
-									font-family: "Avenir", sans-serif;
-									font-weight: 500;
-									font-size: 0.75rem;
-									color: #000000;
-								}
+                .recipes-otds-likes,
+                .recipes-otd-likes {
+                  font-family: "Avenir", sans-serif;
+                  font-weight: 500;
+                  font-size: 0.75rem;
+                  color: #000000;
+                }
               }
             }
           }
         }
 
-				> div:hover {
+        > div:hover {
           .recipes-otd-name-cont {
-						background: #FFF8EF;
-					}
+            background: #fff8ef;
+          }
           .recipes-otd-details-cont {
-						background: #FFF8EF;
-					}
-				}
+            background: #fff8ef;
+          }
+        }
       }
 
       .recipes-otd-load-more-btn-cont {
@@ -445,9 +458,9 @@ img {
           width: 60%;
           margin: auto;
 
-					@media screen and (max-width: 700px) {
-						width: 100%;
-					}
+          @media screen and (max-width: 700px) {
+            width: 100%;
+          }
 
           .input-group {
             display: grid;
@@ -458,7 +471,8 @@ img {
               grid-template-columns: repeat(1, 1fr);
             }
 
-            input, textarea {
+            input,
+            textarea {
               padding: 1rem;
               border-radius: 0;
               border: 2px solid #a9a9a9;
