--- a/src/sass/page-specific/_page-specific.scss
+++ b/src/sass/page-specific/_page-specific.scss
@@ -323,7 +323,6 @@ img {
             flex-direction: column;
             justify-content: center;
             gap: 1rem;
-
             @media screen and (max-width: 700px) {
               text-align: center;
               align-items: center;
@@ -351,6 +350,8 @@ img {
             }
 
             .btn-cont {
+							margin-top: 2rem;
+
               button {
                 font-family: "Avenir", sans-serif;
                 font-size: 1.25rem;
