--- a/src/App.scss
+++ b/src/App.scss
@@ -22,7 +22,7 @@
 .shopping-list-page-cont > * .grocery-shop-cont .search-container button,
 .favorite-recipes-edit-btn,
 .profile-cont > * .shopping-list-cont .no-shopping-list-cont button,
-.shopping-list-page-cont > * .shopping-list-cont .no-shopping-list-cont button,
+.shopping-list-page-cont > * .no-shopping-list-cont a > button,
 .no-favorite-recipes-cont button,
 .modal-backdrop .modal .dismiss-btn-cont button {
   transition: all 0.1s ease;
@@ -37,11 +37,7 @@
 .shopping-list-page-cont > * .grocery-shop-cont .search-container button:hover,
 .favorite-recipes-edit-btn:hover,
 .profile-cont > * .shopping-list-cont .no-shopping-list-cont button:hover,
-.shopping-list-page-cont
-  > *
-  .shopping-list-cont
-  .no-shopping-list-cont
-  button:hover,
+.shopping-list-page-cont > * .no-shopping-list-cont a > button:hover,
 .no-favorite-recipes-cont button:hover,
 .modal-backdrop .modal .dismiss-btn-cont button:hover {
   background: rgba(251, 148, 0, 0.7) !important;
@@ -58,11 +54,7 @@
 .shopping-list-page-cont > * .grocery-shop-cont .search-container button:active,
 .favorite-recipes-edit-btn:active,
 .profile-cont > * .shopping-list-cont .no-shopping-list-cont button:active,
-.shopping-list-page-cont
-  > *
-  .shopping-list-cont
-  .no-shopping-list-cont
-  button:active,
+.shopping-list-page-cont > * .no-shopping-list-cont a > button:active,
 .no-favorite-recipes-cont button:active,
 .modal-backdrop .modal .dismiss-btn-cont button:active {
   background: #fb9400 !important;
