--- a/src/sass/page-specific/_shopping-list.scss
+++ b/src/sass/page-specific/_shopping-list.scss
@@ -176,30 +176,30 @@
 					background: #FFF8EF;
 				}
 			}
+		}
 
-			.no-shopping-list-cont {
-				display: flex;
-				flex-direction: column;
-				gap: 2rem;
-				padding: 4rem;
-				background: #FFF8EF;
-				border-radius: 30px;
-				justify-content: center;
-				align-items: center;
+		.no-shopping-list-cont {
+			display: flex;
+			flex-direction: column;
+			gap: 2rem;
+			padding: 4rem;
+			background: #FFF8EF;
+			border-radius: 30px;
+			justify-content: center;
+			align-items: center;
 
-				@media screen and (max-width: 700px) {
-					padding: 2rem;
-				}
+			@media screen and (max-width: 700px) {
+				padding: 2rem;
+			}
 
-				button {
-					font-family: "Avenir", sans-serif;
-					font-size: 1.25rem;
-					padding: 0.5rem 1rem;
-					background: #fff8ef;
-					border: 4px solid #fb9400;
-					box-sizing: border-box;
-					border-radius: 50px;
-				}
+			a > button {
+				font-family: "Avenir", sans-serif;
+				font-size: 1.25rem;
+				padding: 0.5rem 1rem;
+				background: #fff8ef;
+				border: 4px solid #fb9400;
+				box-sizing: border-box;
+				border-radius: 50px;
 			}
 		}
 
