several changes -> check git issues 4

--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -218,56 +218,7 @@
     display: none;
     align-items: center;
     gap: 1.2rem;
-
-    .mobile-nav {
-      transform: translateX(100%);
-      transition: all 0.3s ease;
-      position: fixed;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      top: 0;
-      background-color: #fff;
-      z-index: 1;
-      height: 100vh;
-      width: 100vw;
-      padding: 2rem;
-      overflow: auto;
-
-      ul {
-        display: grid;
-        gap: 2rem;
-        text-align: center;
-
-        li {
-          img {
-            max-width: 6rem;
-          }
-
-          a {
-            font-size: 2rem;
-          }
-        }
-      }
-
-      .mobile-nav-close-btn-cont {
-        position: absolute;
-        top: 1rem;
-        right: 1rem;
-
-        button {
-          font-size: 2rem;
-          background-color: transparent;
-          border: none;
-          padding: 0;
-          display: flex;
-        }
-      }
-    }
-
-    .mobile-nav.active {
-      transform: translateX(0);
-    }
+		z-index: -1;
 
     @media screen and (max-width: 700px) {
       display: flex;
@@ -279,7 +230,104 @@
         border: none;
         padding: 0;
         display: flex;
+
+				svg path {
+					transition: all 0.3s ease;
+				}
       }
     }
   }
+}
+
+.mobile-nav {
+	transform: translateY(-100%);
+	transition: all 0.3s ease;
+	position: fixed;
+	left: 0;
+	right: 0;
+	// bottom: 0;
+	top: 0;
+	background-color: #fff;
+	z-index: 1;
+	// height: 100vh;
+	width: 100vw;
+	overflow: auto;
+
+	ul {
+		display: grid;
+		text-align: center;
+		padding: 0;
+		margin: 0;
+
+		li {
+			a {
+				display: block;
+				padding: 1rem;
+				font-family: "Avenir", sans-serif;
+				font-weight: 500;
+				font-size: 1.25rem;
+				text-decoration: none;
+				color: #000000;
+				transition: all 0.1s ease;
+			}
+
+      a:hover {
+				color: #fff;
+        background-color: #fb9400;
+      }
+
+      a:active {
+				color: #fff;
+        background-color: #fb9400;
+      }
+
+      a.active {
+				color: #fff;
+        background-color: #fb9400;
+      }
+		}
+
+		li:nth-of-type(4) {
+			a {
+				padding: 0.75rem 0.75rem 0.5rem 0.75rem;
+
+				svg {
+					max-width: 2rem;
+					max-height: 2rem;
+					transition: all 0.1s ease;
+				}
+			}
+
+      a:hover {
+				color: #fff;
+        background-color: #fb9400;
+
+				svg path {
+					fill: #fff;
+				}
+      }
+
+      a:active {
+				color: #fff;
+        background-color: #fb9400;
+
+				svg path {
+					fill: #fff;
+				}
+      }
+
+      a.active {
+				color: #fff;
+        background-color: #fb9400;
+
+				svg path {
+					fill: #fff;
+				}
+      }
+		}
+	}
+}
+
+.mobile-nav.active {
+	transform: translateY(67px);
 }
