--- a/src/sass/page-specific/_profile.scss
+++ b/src/sass/page-specific/_profile.scss
@@ -130,120 +130,128 @@
 					grid-template-columns: repeat(2, 1fr);
 				}
 
-        .recipe-card-cont {
-					position: relative;
+				> * {
+					display: flex;
 
-          > div:nth-of-type(1) {
+					.recipe-card-cont {
+						position: relative;
 						display: flex;
-						flex-direction: column;
-						justify-content: space-between;
-						border-radius: 30px 30px 0px 0px;
-						/* background: #A9A9A9; */
-						/* padding: 2px; */
-						cursor: pointer;
-						box-shadow: 0px 0px 0px 2px #a9a9a9;
-
-            .recipes-otd-img-cont {
-              display: flex;
-              flex: 1 1 100%;
-
-              img {
-                width: 100%;
-                border-radius: 30px 30px 0px 0px;
-              }
-            }
-
-            .recipes-otd-name-cont {
-              min-height: 70px;
-              padding: 0.5rem;
-							background: #fff;
-							transition: background 0.1s ease;
-							letter-spacing: 1px;
-
-              h4 {
-                font-family: "Fontastique", cursive;
-                font-size: 1.25rem;
-                color: #000000;
-              }
-            }
-
-            .recipes-otd-details-cont {
-              display: flex;
-              justify-content: space-between;
-              align-items: flex-end;
-              padding: 0.5rem;
-							background: #fff;
-							transition: background 0.1s ease;
-
-              .recipes-otd-category-cooking-time-cont {
-								display: grid;
-								gap: 0.25rem;
 	
-                p {
-                  font-family: "Avenir", sans-serif;
-                  font-weight: 500;
-                  font-size: 1rem;
-                  color: #000000;
-                }
-              }
-
-              .recipes-otd-likes-dislikes-cont {
-                display: flex;
-                gap: 0.75rem;
-
-                > * {
-                  display: flex;
-                  gap: 0.125rem;
-									align-items: flex-end;
-
-									.recipes-otds-likes, .recipes-otd-likes {
+						> div:nth-of-type(1) {
+							display: flex;
+							flex-direction: column;
+							justify-content: space-between;
+							border-radius: 30px 30px 0px 0px;
+							/* background: #A9A9A9; */
+							/* padding: 2px; */
+							cursor: pointer;
+							box-shadow: 0px 0px 0px 2px #a9a9a9;
+	
+							.recipes-otd-img-cont {
+								display: flex;
+								flex: 1 1 100%;
+	
+								img {
+									width: 100%;
+									border-radius: 30px 30px 0px 0px;
+								}
+							}
+	
+							.recipes-otd-name-cont {
+								min-height: 70px;
+								padding: 0.5rem;
+								background: #fff;
+								transition: background 0.1s ease;
+								letter-spacing: 1px;
+	
+								h4 {
+									font-family: "Fontastique", cursive;
+									font-size: 1.25rem;
+									color: #000000;
+								}
+							}
+	
+							.recipes-otd-details-cont {
+								display: flex;
+								justify-content: space-between;
+								align-items: flex-end;
+								padding: 0.5rem;
+								background: #fff;
+								transition: background 0.1s ease;
+	
+								.recipes-otd-category-cooking-time-cont {
+									display: grid;
+									gap: 0.25rem;
+		
+									p {
 										font-family: "Avenir", sans-serif;
 										font-weight: 500;
-										font-size: 0.75rem;
+										font-size: 1rem;
 										color: #000000;
+										white-space: nowrap;
+										overflow: hidden;
+										text-overflow: ellipsis;
 									}
-                }
-              }
-            }
-          }
-
-					> div:nth-of-type(1):hover {
-						.recipes-otd-name-cont {
-							background: #FFF8EF;
+								}
+	
+								.recipes-otd-likes-dislikes-cont {
+									display: flex;
+									gap: 0.75rem;
+	
+									> * {
+										display: flex;
+										gap: 0.125rem;
+										align-items: flex-end;
+	
+										.recipes-otds-likes, .recipes-otd-likes {
+											font-family: "Avenir", sans-serif;
+											font-weight: 500;
+											font-size: 0.75rem;
+											color: #000000;
+										}
+									}
+								}
+							}
 						}
-						.recipes-otd-details-cont {
-							background: #FFF8EF;
+	
+						> div:nth-of-type(1):hover {
+							.recipes-otd-name-cont {
+								background: #FFF8EF;
+							}
+							.recipes-otd-details-cont {
+								background: #FFF8EF;
+							}
+						}
+	
+						.recipe-card-overlay {
+							opacity: 0;
+							z-index: -2;
+							position: absolute;
+							left: 0;
+							top: 0;
+							right: 0;
+							bottom: 0;
+							background: rgba(0, 0, 0, 0.6);
+							border-radius: 30px 30px 0px 0px;
+							transition: all 0.1s ease;
+							font-size: 2rem;
+							color: #fff;
+							font-family: "Avenir", sans-serif;
+							font-weight: 500;
+							letter-spacing: -0.011em;
+							color: #FFFEFE;
+							display: flex;
+							justify-content: center;
+							align-items: center;
+							cursor: pointer;
+						}
+	
+						.recipe-card-overlay.active {
+							opacity: 1;
+							z-index: 1;
 						}
 					}
-
-          .recipe-card-overlay {
-						opacity: 0;
-						z-index: -2;
-            position: absolute;
-            left: 0;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(0, 0, 0, 0.6);
-            border-radius: 30px 30px 0px 0px;
-						transition: all 0.1s ease;
-						font-size: 2rem;
-						color: #fff;
-						font-family: "Avenir", sans-serif;
-						font-weight: 500;
-						letter-spacing: -0.011em;
-						color: #FFFEFE;
-						display: flex;
-						justify-content: center;
-						align-items: center;
-						cursor: pointer;
-          }
-
-					.recipe-card-overlay.active {
-						opacity: 1;
-						z-index: 1;
-					}
-        }
+				}
       }
 
 			.no-favorite-recipes-cont {
