--- a/src/sass/page-specific/_team.scss
+++ b/src/sass/page-specific/_team.scss
@@ -27,7 +27,7 @@
     text-align: left;
 		font-size: 1.5rem;
 		font-weight: 300;
-		line-height: 38px;
+		line-height: 1.4;
 
 		@media screen and (max-width: 700px) {
 			text-align: center;
@@ -39,18 +39,29 @@
     gap: 4rem;
     grid-template-columns: repeat(3, 1fr);
 		padding: 2rem 0;
+		align-items: flex-start;
 
 		@media screen and (max-width: 700px) {
 			grid-template-columns: repeat(1, 1fr);
 		}
 
 		.member-cont {
-			display: grid;
+			display: flex;
     	gap: 1rem;
+			flex-direction: column;
 
 			.image-cont {
 				display: flex;
     		justify-content: center;
+				align-items: center;
+				flex: 1;
+
+				img {
+					box-shadow: 0px 0px 0px 5px #fb9400;
+					border-radius: 50%;
+					max-width: 201px;
+					max-height: 201px;
+				}
 			}
 
 			.text-details-cont {
