--- a/src/sass/page-specific/_profile.scss
+++ b/src/sass/page-specific/_profile.scss
@@ -9,7 +9,8 @@
     .profile-card {
       display: flex;
       gap: 3rem;
-      justify-content: space-evenly;
+      // justify-content: space-evenly;
+      justify-content: center;
       align-items: center;
 
 			@media screen and (max-width: 700px) {
@@ -78,6 +79,7 @@
 
             img {
               width: 3rem;
+							display: none;
             }
           }
         }
