--- a/src/sass/page-specific/_recipe-content.scss
+++ b/src/sass/page-specific/_recipe-content.scss
@@ -245,7 +245,7 @@
             width: 50vw;
             height: 50vw;
 						max-width: 520px;
-						max-height: 520px;
+						max-height: 340px;
 						min-width: 320px;
 						min-height: 320px;
 						font-family: 'Avenir' !important;
@@ -288,7 +288,7 @@
 							}
 
 							text {
-								font-size: 1rem !important;
+								font-size: 1rem;
 							}
 						}
           }
@@ -296,8 +296,11 @@
       }
 
       .instructions-total-calories-cont {
+				padding-bottom: 4rem;
+
 				@media screen and (max-width: 700px) {
 					display: flex;
+					padding-bottom: 0;
 				}
 
         .instructions-total-calories-box {
