--- a/src/sass/page-specific/_recipe-content.scss
+++ b/src/sass/page-specific/_recipe-content.scss
@@ -251,12 +251,12 @@
 						font-family: 'Avenir' !important;
 						margin: auto;
 
-						@media screen and (max-width: 700px) {
-							width: 80vw;
-							height: 80vw;
-						}
+						// @media screen and (max-width: 700px) {
+						// 	width: 80vw;
+						// 	height: 80vw;
+						// }
 
-						@media screen and (max-width: 500px) {
+						@media screen and (max-width: 700px) {
 							width: 80vw;
 							height: 80vw;
 							min-width: 280px;
