--- a/src/sass/page-specific/_login-signup.scss
+++ b/src/sass/page-specific/_login-signup.scss
@@ -53,6 +53,11 @@
 			grid-template-columns: 1fr;
 			gap: 1rem;
 
+			p {
+				font-family: "Avenir", sans-serif;
+				text-align: center;
+			}
+
 			button {
 				border-radius: 50px;
 				padding: 0.5rem;
@@ -64,6 +69,17 @@
 				background: #FB9400;
 				color: #fff;
 				border: none;
+			}
+
+			.google-signin {
+				background: transparent;
+				padding: 0;
+				display: flex;
+				justify-content: center;
+
+				img {
+					max-width: 14rem;
+				}
 			}
 
 			.login-inputs-register-btn {
